# mie_scattering

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_gmsh
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  run.sh
docs/: current_formulation.md  mie_implementation_plan.md
meshes/: circle_2d.geo
scripts/: build_docker.sh  generate_circle_mesh.py
src/: CMakeLists.txt  example  example.cpp  main.cpp  test_gmsh.py
ufl/: scattering_2d.py
